fixing the double scroll in the pages

--- a/static/style.css
+++ b/static/style.css
@@ -9,19 +9,24 @@
   --tableDatafont:'Rajdhani', sans-serif;
   --fontmainTitle:'Fredericka the Great', cursive;
 }
-body,html{
+html{
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  background: url('../static/pikacho.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+body{
     padding: 0px;
     margin: 0px;
     width: 100%;
     height: 100%;
-    background-image: url('../static/pikacho.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    overflow:scroll;
-    overflow-x:hidden;
-    overflow-y:auto;
-
+    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden!important;
 }
 
 a{
